--- a/public/index.html
+++ b/public/index.html
@@ -14,10 +14,12 @@
       #messages li:nth-child(odd) { background: #eee; }
     </style>
   </head>
+
   <body>
     <ul id="messages"></ul>
-    <form action="">
-      <input id="m" autocomplete="off" /><button>Send</button>
+    <form action="" id="messageForm">
+      <input id="m" autocomplete="off" type="text"/> 
+      <button type="submit">Send</button>
     </form>
     <script src="/socket.io/socket.io.js"></script>
     <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
