--- a/public/index.html
+++ b/public/index.html
@@ -21,8 +21,8 @@
       <input id="m" autocomplete="off" type="text"/> 
       <button type="submit">Send</button>
     </form>
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
+    <script src="/js/socket.js"></script>
+
     <script src="/js/main.js"></script>
   </body>
 </html>
