--- a/public/index.html
+++ b/public/index.html
@@ -6,23 +6,30 @@
     <style>
       * { margin: 0; padding: 0; box-sizing: border-box; }
       body { font: 13px Helvetica, Arial; }
-      form { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
+      form { background: #000; padding: 3px; }
+      form#messageForm {position: fixed; bottom: 0; width: 100%; }
       form input { border: 0; padding: 10px; width: 90%; margin-right: .5%; }
       form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
       #messages { list-style-type: none; margin: 0; padding: 0; }
-      #messages li { padding: 5px 10px; }
-      #messages li:nth-child(odd) { background: #eee; }
+      #messages li { padding: 5px 10px; margin-bottom: 0.5em;}
+      #messages li.chatMSG { background: lightblue;}
+      #messages li.serverMSG { background: lightcoral;}
     </style>
   </head>
 
   <body>
+    <form id="usernameForm" action="">
+      <input id="username" autocomplete="off" type="text" placeholder="What is your name?"/>
+      <button type="submit">Send</button>
+    </form>
+
     <ul id="messages"></ul>
     <form action="" id="messageForm">
       <input id="m" autocomplete="off" type="text"/> 
       <button type="submit">Send</button>
     </form>
     <script src="/js/socket.js"></script>
-
+    <!-- <script src="/socket.io/socket.io.js"></script> -->
     <script src="/js/main.js"></script>
   </body>
 </html>
