--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
 
     <ul id="messages"></ul>
     <form action="" id="messageForm">
-      <input id="m" autocomplete="off" type="text"/> 
+      <input id="m" autocomplete="off" type="text" placeholder="What is on your mind?"/> 
       <button type="submit">Send</button>
     </form>
     <script src="/js/socket.js"></script>
