dotenv gemaakt voor de key

--- a/docs_opdracht2/public/index.html
+++ b/docs_opdracht2/public/index.html
@@ -15,9 +15,10 @@
             <button id="usernameButton" type="submit">Send</button>
         </div>
     </form>
-    <section id="roundEnd">
+    <section id="roundEnd" class="locked">
         <article id="informationTextAboutRound">
         </article>
+        <button id="goToNextRound">Next round</button>
     </section>
 
     <main id="game" class="locked">
