update: scorebord, volgende ronde zonder dat de film is geraden

--- a/docs_opdracht2/public/index.html
+++ b/docs_opdracht2/public/index.html
@@ -19,17 +19,28 @@
         <article id="informationTextAboutRound">
         </article>
         <button id="goToNextRound">Next round</button>
+        <article id="informationAboutMovie">
+        </article>
     </section>
 
     <main id="game" class="locked">
-        <section id="movielist">
+        <section id="drawRole" class="locked">
 
+        </section>
+
+        <section id="quessRole" >
+            <h2>Guess the movie in the chat</h2>
+            <p>The first one who guess the movie right wins this round! So be quick</p>
+            <img src="/img/guestionmark.png" alt="Cover image of a questionmark" >
         </section>
 
         <section id="canvasSection">
             <div id="canvasContainer">
                 <canvas id="canvas" height="400" width="400"></canvas>
             </div>
+            <article id="scoreBoard">
+
+            </article>
         </section>
 
         <section id="chatSection">
